Fix gap between 2 lines in call box and add footer
There is no longer a gap between the title and line below it in call box.
Also added a footer at the bottom.
The project is complete.

--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ button{
     border: 0;
 }
 
-.bottom-content button{
+.call-right button{
     border: solid white 3px;
 }
 
@@ -119,7 +119,7 @@ a{
 .bottom{
     display: flex;
     flex-direction: column;
-    gap: 200px;
+    gap: 100px;
 }
 
 .quote-content{
@@ -127,7 +127,7 @@ a{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 700px
+    height: 500px;
 }
 
 .quote-box{
@@ -148,7 +148,7 @@ a{
 
 .call-box{
     margin: 0 auto;
-    height: 200px;
+    height: 160px;
     width: 1200px;
     border-radius: 8px;
     background-color: #3882F6;
@@ -161,24 +161,32 @@ a{
     height: 100px;
     width: 900px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.bottom-content{
-    display: flex;
     justify-content: space-between;
-    align-items: flex-end;
 }
 
 .call-title{
     font-size: 26px;
     color: white;
-    font-weight: bold;
-    
+    font-weight: bold;   
 }
 
 .call-text{
     font-size: 18px;
     color: white;
+}
+
+.call-left, .call-right{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.footer{
+    height: 130px;
+    background-color:#1F2937;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
 }
